GET bike/:bikeID
